# UMass-Events-Discord-Bot

./: .build.yml  .gitignore  Cargo.toml  LICENSE.txt  README.md  spire.json
src/: events.rs  food.rs  main.rs
src/client/: food.rs  main.rs  rooms.rs
src/common/: datetime.rs  error.rs  listeners.rs  main.rs
src/discord_client/: main.rs
src/server/: food.rs  main.rs  rooms.rs
src/telegram_client/: main.rs
