[package]
name = "umass_bot"
version = "0.2.0"
edition = "2018"
authors = ["gbear605 <developer@vivissi.com>"]

[dependencies]
telegram-bot = "0.6.3"
reqwest = "^0.9"
select = "0.4.2"
chrono = "0.4.6"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.2"
tokio = "^0.1"
tokio-core = "^0.1"
futures = "^0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json"]}
serenity = "^0.6"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "telegram_client"
path = "src/telegram_client/main.rs"

[[bin]]
name = "discord_client"
path = "src/discord_client/main.rs"

[lib]
name = "umass_bot_common"
path = "src/common/main.rs"